# PearToPear

./: CMakeLists.txt
.github/workflows/: ci.yml
include/pear/cli/: commands.hpp  logger.hpp
include/pear/db/: sqlite_database.hpp
include/pear/fs/: hash.hpp  workspace.hpp
include/pear/net/: db_types.hpp  remote_client.hpp
proto/: p2p.proto
src/: main.cpp
src/pear/cli/: command_utils.cpp  command_utils.hpp  commands.cpp  json_output.cpp  json_output.hpp  logger.cpp  output.cpp  output.hpp  status.cpp  status.hpp  sync.cpp  sync.hpp
src/pear/db/: schema.cpp  sqlite_database.cpp
src/pear/demon/: demon.cpp
src/pear/fs/: hash.cpp  workspace.cpp
src/pear/net/: master_service.cpp  remote_client.cpp  storage_service.cpp
tests/: tests.cpp  tests.hpp  tests.md  tests_config.hpp
